('GSM' is Greg Sabino Mullane, greg@turnstep.com)

1.49

1.48 April 5, 2006
	- Bump minimum DBI version to 1.45 (CPAN bug #18260) (plus problems 
		in versions 1.42 and 1.44 [GSM]
	- Fix typo in Pg.pm code (CPAN bug #18537) [marc@sssonline.com]
	- Ensure begin_work is properly set before err. (CPAN bug #18387) [GSM]
	- Force PQexecParams to only run with DML. (CPAN bug #18258) [GSM]
	- Fix bytea encoding problem (CPAN bug #18264) [GSM]
	- Add documentation about connection service files (pg_service.conf). 
		[David Fetter]

1.47 March 20, 2006
	- Fix problem with selecting arrays. (CPAN bugs #18128 and 
		#18177) [GSM]
	- Fix problem with dollar-sign placeholders. [GSM]

1.46 March 16, 2006
	- Fix problem with dollar-sign placeholders. (husseinp@gmail.com)
		(CPAN bug #18209) [GSM]

1.45 February 27, 2006
	- Fix bug preventing bytea values over 20 characters from showing.
		Spotted by Igor Shevchenko. [GSM]

1.44 February 21, 2006
	- Make sure pg_warn does not warn if the database attribute
		PrintWarn is off. (Tyler MacDonald tyler@yi.org) [GSM]
	- Add SIGNATURE file for Module::Signature verification. [GSM]
	- Fix error in documentation for pg_errorlevel. 
		(CPAN bug #17434)
	- Add experimental support for using DEFAULT values inside 
		of execute with $DBDPG_DEFAULT. [GSM]
	- Return the proper SQLSTATE codes on connection failures.
		(CPAN bug #17115) [GSM]
	- Fix parser to handle leading parens. (CPAN bug #15481) [GSM]
	- Make statement handles destruction abort early if 
		InactiveDestroy is set (CPAN bug #14978) [GSM]
	- Make quote work properly for time/date types
		(CPAN bug #15082) [GSM]
	- Ensure all lo_ functions begin a transaction as needed 
		if they are the first action in a script
		(CPAN bug # 13810) [GSM]
	- Fix memory leak in dbdimp.c (k@sawada.cc) [Kenchi Sawada]
	- Fix memory leak in dbdimp.c (dmitri@karasik.eu.org)
		(CPAN bug #16054)
	- Move package declaration lines to fix RPM parser problems
		(CPAN bug #14509) [GSM]