@@ -1,6 +1,8 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
 1.49
+	- Add support for quoting and binding of geometric types: POINT, 
+		LINE, LSEG, BOX, PATH, POLYGON, and CIRCLE. [GSM]
 
 1.48 April 5, 2006
 	- Bump minimum DBI version to 1.45 (CPAN bug #18260) (plus problems 
